[tool.poetry]
name = "twitter-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["sharmas1ddharth <ssiddharth408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
